--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
 						<platform>17</platform>
 						<path>/Users/deengao/Desktop/adt-bundle-mac-x86_64-20130522/sdk</path>
 					</sdk>
+					<emulator>
+						<avd>AVD_0</avd>
+						<wait>100000</wait>
+						<options>-no-skin</options>
+					</emulator>
 					<deleteConflictingFiles>true</deleteConflictingFiles>
 					<undeployBeforeDeploy>true</undeployBeforeDeploy>
 				</configuration>
