--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
 						<path>/Users/deengao/Desktop/adt-bundle-mac-x86_64-20130522/sdk</path>
 					</sdk>
 					<emulator>
-						<avd>AVD_0</avd>
+						<avd>Nex</avd>
 						<wait>100000</wait>
 						<options>-no-skin</options>
 					</emulator>
